k8s/overlays/local/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fishing-app
  namespace: fishing-app
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: fishing-app
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "250m"
